Push from Scanner

--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -471,6 +471,7 @@
 139.199.178.209 xmlrpc;
 139.199.229.157 xmlrpc;
 139.224.114.39 xmlrpc;
+139.28.52.66 xmlrpc;
 139.59.234.97 xmlrpc;
 139.59.96.184 xmlrpc;
 139.59.97.220 xmlrpc;
@@ -1382,7 +1383,6 @@
 20.212.119.214 xmlrpc;
 2001:19f0:4400:2b95:5400:4ff:feb1:a059 xmlrpc;
 2001:19f0:4400:6938:5400:4ff:fe84:d6c6 xmlrpc;
-2001:1bb0:e000:1e::112 xmlrpc;
 202.131.65.110 xmlrpc;
 202.14.4.134 xmlrpc;
 202.14.4.150 xmlrpc;
@@ -1910,6 +1910,7 @@
 46.20.76.15 xmlrpc;
 46.22.62.48 xmlrpc;
 46.23.98.64 xmlrpc;
+46.242.10.166 xmlrpc;
 46.242.11.201 xmlrpc;
 46.242.11.74 xmlrpc;
 46.242.14.228 xmlrpc;
