--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -245,6 +245,7 @@
 118.89.200.37 xmlrpc;
 119.123.158.126 xmlrpc;
 119.23.236.73 xmlrpc;
+119.236.103.207 xmlrpc;
 119.236.177.51 xmlrpc;
 119.27.166.31 xmlrpc;
 119.28.194.121 xmlrpc;
@@ -1878,6 +1879,7 @@
 46.138.42.253 xmlrpc;
 46.138.54.22 xmlrpc;
 46.138.56.227 xmlrpc;
+46.147.116.186 xmlrpc;
 46.147.98.5 xmlrpc;
 46.148.128.33 xmlrpc;
 46.148.132.183 xmlrpc;
