--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -647,6 +647,7 @@
 167.172.93.26 xmlrpc;
 167.172.95.136 xmlrpc;
 167.71.208.161 xmlrpc;
+167.71.217.158 xmlrpc;
 168.81.46.44 xmlrpc;
 169.150.222.76 xmlrpc;
 170.187.226.128 xmlrpc;
@@ -1223,6 +1224,7 @@
 188.68.81.249 xmlrpc;
 188.94.171.6 xmlrpc;
 188.94.33.149 xmlrpc;
+188.94.33.156 xmlrpc;
 188.94.33.204 xmlrpc;
 188.94.33.82 xmlrpc;
 192.109.243.217 xmlrpc;
