Push from Scanner

--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -2678,6 +2678,7 @@
 94.158.190.83 xmlrpc;
 94.180.37.250 xmlrpc;
 94.181.160.57 xmlrpc;
+94.188.80.3 xmlrpc;
 94.19.126.235 xmlrpc;
 94.19.132.31 xmlrpc;
 94.228.198.147 xmlrpc;
