--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -2277,6 +2277,7 @@
 79.173.88.44 xmlrpc;
 79.174.33.157 xmlrpc;
 79.174.33.250 xmlrpc;
+79.174.35.25 xmlrpc;
 8.130.132.51 xmlrpc;
 8.130.22.204 xmlrpc;
 8.130.85.125 xmlrpc;
