--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -2061,6 +2061,8 @@
 5.153.183.31 xmlrpc;
 5.153.189.247 xmlrpc;
 5.157.32.20 xmlrpc;
+5.157.32.64 xmlrpc;
+5.157.33.192 xmlrpc;
 5.157.33.218 xmlrpc;
 5.164.148.83 xmlrpc;
 5.164.8.79 xmlrpc;
