--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -267,6 +267,7 @@
 120.24.109.199 xmlrpc;
 120.24.225.212 xmlrpc;
 120.25.2.184 xmlrpc;
+120.26.0.11 xmlrpc;
 120.48.112.141 xmlrpc;
 120.55.165.45 xmlrpc;
 120.55.39.37 xmlrpc;
