--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -2451,6 +2451,7 @@
 87.250.224.7 xmlrpc;
 87.250.224.79 xmlrpc;
 87.250.224.8 xmlrpc;
+87.250.224.80 xmlrpc;
 87.250.224.81 xmlrpc;
 87.250.224.9 xmlrpc;
 87.255.10.63 xmlrpc;
