--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -1496,6 +1496,7 @@
 213.180.203.85 xmlrpc;
 213.180.203.9 xmlrpc;
 213.193.10.78 xmlrpc;
+213.193.9.219 xmlrpc;
 213.208.176.178 xmlrpc;
 213.221.51.214 xmlrpc;
 213.222.226.64 xmlrpc;
@@ -2344,6 +2345,7 @@
 81.200.151.143 xmlrpc;
 81.200.8.235 xmlrpc;
 81.200.8.36 xmlrpc;
+81.222.187.4 xmlrpc;
 81.23.148.131 xmlrpc;
 81.23.183.143 xmlrpc;
 81.27.147.151 xmlrpc;
