--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -800,6 +800,7 @@
 178.185.221.106 xmlrpc;
 178.187.0.94 xmlrpc;
 178.20.29.52 xmlrpc;
+178.204.127.88 xmlrpc;
 178.204.252.139 xmlrpc;
 178.206.200.23 xmlrpc;
 178.206.254.164 xmlrpc;
