Push from Scanner

--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -2173,6 +2173,7 @@
 5.59.222.41 xmlrpc;
 5.59.246.29 xmlrpc;
 5.59.31.8 xmlrpc;
+5.59.4.151 xmlrpc;
 5.8.20.168 xmlrpc;
 5.8.20.170 xmlrpc;
 5.8.21.34 xmlrpc;
