Push from Scanner

--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -1875,6 +1875,7 @@
 45.89.100.115 xmlrpc;
 45.94.119.111 xmlrpc;
 45.94.119.156 xmlrpc;
+45.94.119.188 xmlrpc;
 45.94.119.197 xmlrpc;
 45.95.67.177 xmlrpc;
 46.0.137.179 xmlrpc;
