--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -1433,6 +1433,7 @@
 211.149.243.207 xmlrpc;
 212.106.43.72 xmlrpc;
 212.115.49.166 xmlrpc;
+212.124.6.114 xmlrpc;
 212.124.6.188 xmlrpc;
 212.124.6.69 xmlrpc;
 212.124.7.120 xmlrpc;
@@ -1718,6 +1719,7 @@
 37.18.38.128 xmlrpc;
 37.19.72.35 xmlrpc;
 37.20.154.14 xmlrpc;
+37.20.168.73 xmlrpc;
 37.20.213.87 xmlrpc;
 37.200.123.157 xmlrpc;
 37.200.73.57 xmlrpc;
