--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -534,6 +534,7 @@
 146.190.111.80 xmlrpc;
 146.190.90.35 xmlrpc;
 146.190.92.144 xmlrpc;
+146.190.97.15 xmlrpc;
 146.190.97.43 xmlrpc;
 146.56.198.139 xmlrpc;
 146.66.10.220 xmlrpc;
