Push from Scanner

--- a/nginx-config-files/git.conf
+++ b/nginx-config-files/git.conf
@@ -1211,6 +1211,7 @@
 65.49.1.103 git;
 65.49.1.104 git;
 65.49.1.105 git;
+65.49.1.106 git;
 65.49.1.107 git;
 65.49.1.108 git;
 65.49.1.109 git;
@@ -1297,6 +1298,7 @@
 65.49.1.81 git;
 65.49.1.82 git;
 65.49.1.83 git;
+65.49.1.84 git;
 65.49.1.85 git;
 65.49.1.86 git;
 65.49.1.87 git;
