--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -1905,6 +1905,7 @@
 46.138.42.253 xmlrpc;
 46.138.54.22 xmlrpc;
 46.138.56.227 xmlrpc;
+46.138.81.165 xmlrpc;
 46.147.116.186 xmlrpc;
 46.147.98.5 xmlrpc;
 46.148.128.33 xmlrpc;
