Push from Scanner

--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -1114,6 +1114,7 @@
 185.88.37.133 xmlrpc;
 185.9.78.21 xmlrpc;
 185.9.78.37 xmlrpc;
+185.9.78.5 xmlrpc;
 185.90.102.46 xmlrpc;
 185.95.106.204 xmlrpc;
 185.99.6.45 xmlrpc;
