Push from Scanner

--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -723,6 +723,7 @@
 176.193.146.112 xmlrpc;
 176.193.8.119 xmlrpc;
 176.195.189.182 xmlrpc;
+176.195.218.134 xmlrpc;
 176.195.226.62 xmlrpc;
 176.212.184.12 xmlrpc;
 176.212.190.17 xmlrpc;
@@ -2160,6 +2161,7 @@
 5.255.231.18 xmlrpc;
 5.255.231.184 xmlrpc;
 5.255.231.199 xmlrpc;
+5.255.231.31 xmlrpc;
 5.255.231.43 xmlrpc;
 5.255.231.46 xmlrpc;
 5.255.231.56 xmlrpc;
