Push from Scanner

--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -859,6 +859,7 @@
 178.69.72.223 xmlrpc;
 178.70.169.42 xmlrpc;
 178.71.94.219 xmlrpc;
+178.78.32.242 xmlrpc;
 178.78.49.164 xmlrpc;
 18.138.215.224 xmlrpc;
 18.162.197.173 xmlrpc;
@@ -1234,6 +1235,7 @@
 192.46.227.185 xmlrpc;
 192.53.114.79 xmlrpc;
 193.0.149.6 xmlrpc;
+193.104.145.26 xmlrpc;
 193.106.69.12 xmlrpc;
 193.107.148.154 xmlrpc;
 193.110.136.51 xmlrpc;
