--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -2238,6 +2238,7 @@
 77.43.246.75 xmlrpc;
 77.45.157.250 xmlrpc;
 77.50.102.168 xmlrpc;
+77.50.121.159 xmlrpc;
 77.51.144.158 xmlrpc;
 77.51.149.89 xmlrpc;
 77.51.51.112 xmlrpc;
