Push from Scanner

--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -1113,6 +1113,7 @@
 185.99.6.45 xmlrpc;
 185.99.7.46 xmlrpc;
 185.99.7.61 xmlrpc;
+185.99.7.67 xmlrpc;
 185.99.7.68 xmlrpc;
 188.0.169.118 xmlrpc;
 188.0.169.252 xmlrpc;
@@ -2692,6 +2693,7 @@
 94.233.240.237 xmlrpc;
 94.233.248.10 xmlrpc;
 94.233.248.229 xmlrpc;
+94.233.248.254 xmlrpc;
 94.233.249.141 xmlrpc;
 94.237.2.160 xmlrpc;
 94.242.171.120 xmlrpc;
