Push from Scanner

--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -1517,6 +1517,7 @@
 217.26.21.199 xmlrpc;
 217.29.178.222 xmlrpc;
 217.29.188.218 xmlrpc;
+217.29.189.178 xmlrpc;
 217.66.157.199 xmlrpc;
 218.102.216.24 xmlrpc;
 218.16.68.214 xmlrpc;
