Push from Scanner

--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -2758,6 +2758,7 @@
 95.24.233.133 xmlrpc;
 95.24.239.139 xmlrpc;
 95.24.3.105 xmlrpc;
+95.24.30.42 xmlrpc;
 95.24.38.108 xmlrpc;
 95.24.45.50 xmlrpc;
 95.24.46.89 xmlrpc;
