Push from Scanner

--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -2309,6 +2309,7 @@
 80.76.106.111 xmlrpc;
 80.76.106.112 xmlrpc;
 80.76.110.177 xmlrpc;
+80.76.110.188 xmlrpc;
 80.79.247.246 xmlrpc;
 80.80.196.122 xmlrpc;
 80.95.44.54 xmlrpc;
