--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -1022,6 +1022,7 @@
 185.225.33.46 xmlrpc;
 185.227.134.106 xmlrpc;
 185.228.135.226 xmlrpc;
+185.228.135.35 xmlrpc;
 185.228.135.50 xmlrpc;
 185.23.66.29 xmlrpc;
 185.233.92.211 xmlrpc;
@@ -1635,6 +1636,7 @@
 31.220.110.3 xmlrpc;
 31.23.15.125 xmlrpc;
 31.23.216.79 xmlrpc;
+31.28.199.105 xmlrpc;
 31.28.221.10 xmlrpc;
 31.29.193.147 xmlrpc;
 31.31.196.139 xmlrpc;
@@ -2805,6 +2807,7 @@
 95.46.179.210 xmlrpc;
 95.47.246.230 xmlrpc;
 95.52.124.101 xmlrpc;
+95.52.149.5 xmlrpc;
 95.54.231.123 xmlrpc;
 95.54.33.52 xmlrpc;
 95.55.245.52 xmlrpc;
