--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -2021,6 +2021,7 @@
 5.101.157.98 xmlrpc;
 5.101.6.56 xmlrpc;
 5.104.57.229 xmlrpc;
+5.11.72.99 xmlrpc;
 5.129.176.103 xmlrpc;
 5.129.178.50 xmlrpc;
 5.129.189.212 xmlrpc;
