--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -2436,6 +2436,7 @@
 87.250.224.234 xmlrpc;
 87.250.224.237 xmlrpc;
 87.250.224.252 xmlrpc;
+87.250.224.3 xmlrpc;
 87.250.224.4 xmlrpc;
 87.250.224.5 xmlrpc;
 87.250.224.79 xmlrpc;
