Push from Scanner

--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -2822,6 +2822,7 @@
 95.66.194.78 xmlrpc;
 95.68.131.78 xmlrpc;
 95.71.93.67 xmlrpc;
+95.72.218.139 xmlrpc;
 95.73.171.35 xmlrpc;
 95.73.175.18 xmlrpc;
 95.73.219.246 xmlrpc;
