--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -2389,6 +2389,7 @@
 85.140.163.95 xmlrpc;
 85.140.4.175 xmlrpc;
 85.143.173.5 xmlrpc;
+85.172.95.169 xmlrpc;
 85.174.200.158 xmlrpc;
 85.174.200.170 xmlrpc;
 85.174.204.118 xmlrpc;
