--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -1116,6 +1116,7 @@
 188.0.189.151 xmlrpc;
 188.0.189.215 xmlrpc;
 188.113.166.115 xmlrpc;
+188.113.19.29 xmlrpc;
 188.119.116.139 xmlrpc;
 188.119.117.35 xmlrpc;
 188.120.237.195 xmlrpc;
@@ -2307,6 +2308,7 @@
 80.246.81.133 xmlrpc;
 80.246.94.129 xmlrpc;
 80.246.94.222 xmlrpc;
+80.251.226.105 xmlrpc;
 80.251.227.61 xmlrpc;
 80.251.230.94 xmlrpc;
 80.251.232.16 xmlrpc;
