--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -1009,6 +1009,7 @@
 185.188.96.61 xmlrpc;
 185.190.183.144 xmlrpc;
 185.196.118.225 xmlrpc;
+185.2.33.15 xmlrpc;
 185.20.45.49 xmlrpc;
 185.200.117.131 xmlrpc;
 185.200.240.65 xmlrpc;
@@ -2551,6 +2552,7 @@
 91.225.228.38 xmlrpc;
 91.226.15.109 xmlrpc;
 91.226.15.12 xmlrpc;
+91.226.15.61 xmlrpc;
 91.226.164.72 xmlrpc;
 91.226.165.101 xmlrpc;
 91.226.165.131 xmlrpc;
