--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -2752,6 +2752,7 @@
 95.161.140.4 xmlrpc;
 95.161.142.40 xmlrpc;
 95.161.220.114 xmlrpc;
+95.174.107.208 xmlrpc;
 95.174.115.204 xmlrpc;
 95.179.124.242 xmlrpc;
 95.179.125.212 xmlrpc;
