--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -2047,6 +2047,7 @@
 5.139.231.179 xmlrpc;
 5.139.231.44 xmlrpc;
 5.139.232.242 xmlrpc;
+5.139.233.68 xmlrpc;
 5.140.97.78 xmlrpc;
 5.142.3.174 xmlrpc;
 5.144.119.198 xmlrpc;
@@ -2165,6 +2166,7 @@
 5.59.246.29 xmlrpc;
 5.59.31.8 xmlrpc;
 5.59.4.151 xmlrpc;
+5.59.5.25 xmlrpc;
 5.8.20.168 xmlrpc;
 5.8.20.170 xmlrpc;
 5.8.21.34 xmlrpc;
@@ -2830,6 +2832,7 @@
 95.47.246.230 xmlrpc;
 95.52.124.101 xmlrpc;
 95.52.149.5 xmlrpc;
+95.53.141.4 xmlrpc;
 95.54.231.123 xmlrpc;
 95.54.33.52 xmlrpc;
 95.55.245.52 xmlrpc;
