Push from Scanner

--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -2858,5 +2858,6 @@
 95.83.39.173 xmlrpc;
 95.84.148.249 xmlrpc;
 95.84.40.120 xmlrpc;
+95.84.8.242 xmlrpc;
 95.86.236.122 xmlrpc;
 96.9.213.130 xmlrpc;
