--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -1880,6 +1880,7 @@
 46.138.179.3 xmlrpc;
 46.138.179.5 xmlrpc;
 46.138.180.208 xmlrpc;
+46.138.24.132 xmlrpc;
 46.138.39.224 xmlrpc;
 46.138.42.195 xmlrpc;
 46.138.42.253 xmlrpc;
