Push from Scanner

--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -2108,6 +2108,7 @@
 5.188.62.26 xmlrpc;
 5.188.62.76 xmlrpc;
 5.19.252.44 xmlrpc;
+5.19.97.60 xmlrpc;
 5.19.99.93 xmlrpc;
 5.2.55.212 xmlrpc;
 5.2.56.89 xmlrpc;
@@ -2722,6 +2723,7 @@
 94.25.173.250 xmlrpc;
 94.250.249.80 xmlrpc;
 94.250.251.175 xmlrpc;
+94.253.36.255 xmlrpc;
 94.253.41.205 xmlrpc;
 94.26.186.130 xmlrpc;
 94.28.145.93 xmlrpc;
@@ -2784,6 +2786,7 @@
 95.182.125.89 xmlrpc;
 95.182.126.116 xmlrpc;
 95.182.91.5 xmlrpc;
+95.183.70.190 xmlrpc;
 95.183.76.77 xmlrpc;
 95.188.160.106 xmlrpc;
 95.188.189.188 xmlrpc;
