Push from Scanner

--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -985,6 +985,7 @@
 185.15.38.19 xmlrpc;
 185.15.38.34 xmlrpc;
 185.15.38.48 xmlrpc;
+185.15.38.64 xmlrpc;
 185.15.38.67 xmlrpc;
 185.15.38.83 xmlrpc;
 185.15.38.98 xmlrpc;
@@ -1103,6 +1104,7 @@
 185.9.78.5 xmlrpc;
 185.90.102.46 xmlrpc;
 185.95.106.204 xmlrpc;
+185.99.5.230 xmlrpc;
 185.99.6.200 xmlrpc;
 185.99.6.45 xmlrpc;
 185.99.7.46 xmlrpc;
@@ -1205,6 +1207,7 @@
 188.32.199.235 xmlrpc;
 188.35.131.221 xmlrpc;
 188.43.205.201 xmlrpc;
+188.43.7.73 xmlrpc;
 188.64.167.89 xmlrpc;
 188.65.17.240 xmlrpc;
 188.65.17.49 xmlrpc;
@@ -2351,6 +2354,7 @@
 81.13.40.165 xmlrpc;
 81.161.23.254 xmlrpc;
 81.163.138.7 xmlrpc;
+81.177.104.67 xmlrpc;
 81.177.105.68 xmlrpc;
 81.177.126.74 xmlrpc;
 81.177.127.214 xmlrpc;
