Push from Scanner

--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -1515,6 +1515,7 @@
 213.24.134.51 xmlrpc;
 213.242.18.53 xmlrpc;
 213.251.205.53 xmlrpc;
+213.59.158.2 xmlrpc;
 213.80.200.249 xmlrpc;
 213.80.202.203 xmlrpc;
 213.80.206.193 xmlrpc;
@@ -2823,6 +2824,7 @@
 95.24.64.180 xmlrpc;
 95.24.77.253 xmlrpc;
 95.24.82.246 xmlrpc;
+95.25.135.115 xmlrpc;
 95.25.135.180 xmlrpc;
 95.25.198.3 xmlrpc;
 95.25.215.2 xmlrpc;
