--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -2603,6 +2603,7 @@
 91.236.80.221 xmlrpc;
 91.237.179.235 xmlrpc;
 91.238.64.2 xmlrpc;
+91.239.69.101 xmlrpc;
 91.241.212.108 xmlrpc;
 91.241.251.106 xmlrpc;
 91.245.129.155 xmlrpc;
