Push from Scanner

--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -2664,6 +2664,7 @@
 92.62.56.233 xmlrpc;
 92.62.57.108 xmlrpc;
 92.62.57.200 xmlrpc;
+92.62.57.254 xmlrpc;
 92.62.57.255 xmlrpc;
 92.62.59.27 xmlrpc;
 92.63.188.46 xmlrpc;
