--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -2241,6 +2241,7 @@
 77.232.164.136 xmlrpc;
 77.232.164.184 xmlrpc;
 77.232.164.51 xmlrpc;
+77.238.99.141 xmlrpc;
 77.37.161.73 xmlrpc;
 77.37.232.193 xmlrpc;
 77.40.2.201 xmlrpc;
@@ -2628,6 +2629,7 @@
 92.223.86.9 xmlrpc;
 92.240.221.127 xmlrpc;
 92.241.246.150 xmlrpc;
+92.242.123.125 xmlrpc;
 92.245.34.207 xmlrpc;
 92.246.154.252 xmlrpc;
 92.248.137.83 xmlrpc;
