--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -2688,6 +2688,7 @@
 93.187.181.83 xmlrpc;
 93.190.125.4 xmlrpc;
 93.190.231.205 xmlrpc;
+93.80.201.118 xmlrpc;
 93.80.47.155 xmlrpc;
 93.92.200.170 xmlrpc;
 94.103.231.250 xmlrpc;
