--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -647,6 +647,7 @@
 167.172.93.26 xmlrpc;
 167.172.95.136 xmlrpc;
 167.71.217.158 xmlrpc;
+167.71.217.202 xmlrpc;
 167.71.217.68 xmlrpc;
 168.81.46.44 xmlrpc;
 169.150.222.76 xmlrpc;
