--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -503,6 +503,7 @@
 145.249.76.8 xmlrpc;
 145.255.0.213 xmlrpc;
 145.255.0.57 xmlrpc;
+145.255.11.95 xmlrpc;
 145.255.3.105 xmlrpc;
 145.255.9.103 xmlrpc;
 145.255.9.38 xmlrpc;
