Push from Scanner

--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -1175,6 +1175,7 @@
 188.232.102.90 xmlrpc;
 188.232.26.21 xmlrpc;
 188.232.28.139 xmlrpc;
+188.232.28.247 xmlrpc;
 188.232.28.67 xmlrpc;
 188.232.4.34 xmlrpc;
 188.232.8.94 xmlrpc;
