--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -1505,6 +1505,7 @@
 213.242.18.53 xmlrpc;
 213.251.205.53 xmlrpc;
 213.59.158.2 xmlrpc;
+213.59.163.98 xmlrpc;
 213.80.200.249 xmlrpc;
 213.80.202.203 xmlrpc;
 213.80.206.193 xmlrpc;
