--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -554,6 +554,7 @@
 148.66.146.6 xmlrpc;
 148.66.147.12 xmlrpc;
 148.66.147.20 xmlrpc;
+148.66.147.3 xmlrpc;
 148.72.207.110 xmlrpc;
 148.72.211.177 xmlrpc;
 148.72.232.105 xmlrpc;
